2001-04-02  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* TreeGraph.pm :
 	- added viewNode method
	- added -animation option
        - added demo for Tk widget program
        - test run now in batch mode

2000-05-15  Dominique Dumont  <domi@ispserv.grenoble.hp.com> v1.023

	* TreeGraph.pm : 
	- added flashNode method
	- changed computing of text size in addNode to use bbox. This way, you
	  can use other fonts.
	- added modifyNode
	- fixed re-draw bug
	- addNode accepts strings or usual arrayref.
	- added scroll adjusting in SYNOPSIS

2000-01-25  Dominique Dumont  <domi@ispserv.grenoble.hp.com> v1.016

	* TreeGraph.pm: 
	- fix redrawing bugs
	- removed setting of -scrollregion
	- added small explanations related to scrolling
	- added a dash to pack parameter (needed for Tk800.017)

1999-08-12  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.015

	* TreeGraph.pm (addAllShortcuts): 
	- splined shortcut arrow
	- bug fix: can now have more than one shortcut starting from a node

1999-07-23  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm :
	- can draw more compact trees (big changes in the code)

1999-04-21  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.011

	* TreeGraph.pm : 
	- added nodeTag option
	- relaxed rules about shortcuts
	- some bug fixes provided by Bernard Weiler (Thanks !)

1999-02-12  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm (addNode): Added 'after' parameters so addNode can
	draw itself the arrows.

1999-02-11  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm (addNode): coordinate are now handled by the 
	object

1999-01-25  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm : fixed shortCut and unselectNodes problems
	  added comments on internal data structures

1999-01-22  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm : better doc

1999-01-15  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm : doc update 
